<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_head_gemini">
        <EditTextPreference
            app:defaultValue=""
            app:key="pref_gemini_api_key"
            app:title="@string/pref_gemini_api_key"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_head_orion">
        <ListPreference
            app:defaultValue="EN"
            app:entries="@array/languages_entries"
            app:entryValues="@array/languages_values"
            app:key="pref_orion_language"
            app:title="@string/pref_orion_language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1.0"
            app:entries="@array/speed_entries"
            app:entryValues="@array/speed_values"
            app:key="pref_orion_tts_speed"
            app:title="@string/pref_orion_tts_speed"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="pref_android_tts_settings"
            app:summary="@string/pref_android_tts_settings_summary"
            app:title="@string/pref_android_tts_settings" />

        <ListPreference
            app:defaultValue="android"
            app:entries="@array/voice_engine_entries"
            app:entryValues="@array/voice_engine_values"
            app:key="pref_orion_voice_engine"
            app:title="@string/pref_orion_voice_engine"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="Kore"
            app:entries="@array/gemini_voice_entries"
            app:entryValues="@array/gemini_voice_values"
            app:key="pref_orion_gemini_voice"
            app:title="@string/pref_orion_gemini_voice"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="pref_orion_gemini_voice_info"
            app:summary="@string/pref_orion_gemini_voice_info" />

        <ListPreference
            app:key="pref_orion_reading_mode"
            app:title="Reading mode"
            app:defaultValue="prompt_read"
            app:entries="@array/reading_mode_entries"
            app:entryValues="@array/reading_mode_values"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pref_orion_haptic_feedback"
            app:summary="@string/pref_orion_haptic_feedback_summary"
            app:title="@string/pref_orion_haptic_feedback" />

        <Preference
            app:key="pref_enable_orion"
            app:title="@string/pref_enable_orion_title"
            app:summary="@string/pref_enable_orion_summary" />

        <Preference
            app:key="pref_close_settings"
            app:title="Close settings"
            app:summary="Return to the previous screen" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_head_diagnostics">
        <Preference
            app:key="pref_view_diagnostics"
            app:summary="@string/pref_view_diagnostics_summary"
            app:title="@string/pref_view_diagnostics" />

        <Preference
            app:key="pref_share_diagnostics"
            app:summary="@string/pref_share_diagnostics_summary"
            app:title="@string/pref_share_diagnostics" />

        <Preference
            app:key="pref_clear_diagnostics"
            app:summary="@string/pref_clear_diagnostics_summary"
            app:title="@string/pref_clear_diagnostics" />
    </PreferenceCategory>

</PreferenceScreen>
